--- a/WebTerm/templates/index.html
+++ b/WebTerm/templates/index.html
@@ -34,11 +34,11 @@
 
 
     <script>
-        device_list=[];
+        var device_list=[];
 
-        function prepareTerminal(DeviceId){
-            document.getElementById("id").innerText=DeviceId.toString();
-            document.getElementById("text-input").value=DeviceId.toString();
+        function prepareTerminal(DeviceId, DeviceName){
+            document.getElementById("id").innerText=DeviceName;
+            document.getElementById("text-input").value=DeviceName;
             $.ajax({
               url: "/terminal/",
               type: "GET",
@@ -55,7 +55,15 @@
             source.onmessage = function(event) {
               {#document.getElementById("result").innerHTML += event.data + "<br>";#}
                 console.log("received message");
-                console.log(event.data)
+                {#console.log(event.data);#}
+                device_list = JSON.parse(event.data);
+                {#for(i=0; i<devices.length; i++){#}
+                {#    console.log(devices[i]);#}
+                {# }#}
+
+                {#devices = JSON.parse(event);#}
+                {#console.log(device_list)#}
+                showDropdown();
             };
             source.onerror = function (error) {
                 console.log(error)
@@ -87,9 +95,11 @@
         }
         function showDropdown(){
             document.getElementById("dropdown-content").innerHTML="";
-            for(i=1; i<=100; i++){
-                if(i.toString().includes(document.getElementById("text-input").value)){
-                    document.getElementById("dropdown-content").innerHTML+="<a class=\"dropdown-item\" onclick=\"prepareTerminal("+i+")\">"+i+"</a>";
+            {#console.log(device_list);#}
+            for(i=0; i<device_list.length; i++){
+                console.log(device_list[i]);
+                if(device_list[i].name.includes(document.getElementById("text-input").value)){
+                    document.getElementById("dropdown-content").innerHTML+="<a class=\"dropdown-item\" onclick=\"prepareTerminal('"+device_list[i].deviceId+"','"+device_list[i].name+"')\">"+device_list[i].name+"</a>";
                 }
 
             }
