--- a/WebTerm/templates/index.html
+++ b/WebTerm/templates/index.html
@@ -94,7 +94,10 @@
                   console.log(result);
 
                   clearInterval(countdown);
-                  if(result.pending===true){
+                  if(result.authenticated===false){
+                      alert("Please login first!");
+                  }
+                  else if(result.pending===true){
                       document.getElementById("message").innerText=" The status of this port is PENDING";
                   }
                   else{
