check pending to check not connected

--- a/WebTerm/templates/index.html
+++ b/WebTerm/templates/index.html
@@ -153,7 +153,7 @@
                       alert("Please login first!");
                   }
                   else if(result.pending===true){
-                      document.getElementById("message").innerText=" The status of this port is PENDING";
+                      document.getElementById("message").innerText=" This device is not ready to use";
                   }
                   else{
                       if(result.port!=null){
